= v0.6.0 - EDGE
* Rails3 compatibility

= v0.5.3 - 2010-06-14
* Fix: Getting rid of deprecation warnings about tasks not sitting in lib.

= v0.5.2 - 2010-06-11
* Ext 3.2.1
* Fix: Netzke::Base.before_load is now also called for the widgets embedded directly into a view.
* New: support for external stylesheets.
* Fix: the "value" column type has been changed to text to prevent migration problems is some cases
* New: global_persistent_config method allows accessing persistent storage with no owner (widget) assigned
* New: any widget can now implement <tt>before_api_call</tt> interceptor. If it returns anything but empty hash, it'll be used as the result of *any* API call to this widget. The interceptor receives as parameter the name of the API call issued and the arguments. Use it to implement authorization.
* Fix: got the Ext's state provider out of the way (thank you for all the confusion)

= v0.5.1 - 2010-02-26
* Compatibility with Ext 3.1.1
* New: <tt>Netzke.page</tt> object now contains all the widgets declared on the page
* Code: replaced (references to) deprecated function names

= v0.5.0 - 2010-01-10
* Compatibility with Ext 3.1.0
* API change: Netzke widget's now should be declared directly in the views instead of controllers.
* API change: all ExtJS and Netzke JavaScript and styles are now loaded with the help of <tt>netzke_init</tt> helper.
* API change: <tt>persistence_key</tt> option replaces <tt>persistent_config_id</tt> option.
* Impr: headers in panels in the "config" mode now show the widget's global ID.
* New: required ExtJS version check introduced at initial Netzke load.
* Depr: :widget_class_name option is deprecated, use :class_name.
* DRY: now there's no need to always define "actions" method, use it to override the defaults, which are automatically calculated based on configuration for toolbars/menu.
* Impr: each generated JS class now has its unique xtype, e.g. "netzkegridpanel".
* Fix: FeedbackGhost moved over from netzke-basepack.
