@@ -1,6 +1,6 @@
 module Netzke
   class ExtendedServerCaller < ServerCaller
-    def self.js_extend_properties
+    def self.js_properties
       {
         :title => "Extended Server Caller",
         :bug_server => <<-END_OF_JAVASCRIPT.l,
