@@ -1,7 +1,7 @@
 module Netzke
   module ScopedWidgets
     class ExtendedScopedWidget < SomeScopedWidget
-      def self.js_extend_properties
+      def self.js_properties
         {
           :title => "Extended Scoped Widget Title",
           :html => "Extended Scoped Widget HTML"
