@@ -20,7 +20,7 @@ module Netzke
       }
     end
     
-    def self.js_extend_properties
+    def self.js_properties
       {
         :title => "Static Aggregator",
         :layout => 'border'
