@@ -14,7 +14,7 @@ module Netzke
       )
     end
     
-    def self.js_extend_properties
+    def self.js_properties
       {
         :title => "Panel that has actions",
         
